Fixing an issue with applying classes to folder while dragging on firefox

--- a/src/OrchardCore.Modules/OrchardCore.Media/Assets/scss/media.scss
+++ b/src/OrchardCore.Modules/OrchardCore.Media/Assets/scss/media.scss
@@ -74,7 +74,7 @@ $media-border-content: 1px solid rgba(0, 0, 0, 0.1);
         color: lightgray;
     }
     
-    .folder-dragover {
+    .folderhovered {
         font-weight:bold;
     }
 
